<resources>
    <string name="app_name">PlaceOfGames</string>
    <string name="games">Игры</string>
    <string name="places">Площадки</string>
    <string name="sign_up">Записаться</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="name">Имя</string>
    <string name="participants">Участники</string>
    <string name="repeat_pass">Подтвердите пароль</string>
    <string name="register">Зарегистрироваться</string>
    <string name="registration">Регистрация</string>
    <string name="working_hours">Время работы</string>
    <string name="profile">Профиль</string>
    <string name="delete">Удалить</string>
    <string name="create_event">Создание мероприятия</string>
</resources>